-CQALineLogic. -Filtering by parent CQALine. -Adding AttachmentsBox directive to CommonDirectives. -Working with CQADetail...

--- a/frontend/main/app/views/cqa.html
+++ b/frontend/main/app/views/cqa.html
@@ -62,4 +62,4 @@
     </div>
 </form>
 <input type="button" ng-click="save(baseEntity)" value="save">
-<cqa-detail></cqa-detail>
+<cqa-detail parent-entity="baseEntity" parent-type="CQAHeader"></cqa-detail>
