--- a/frontend/main/app/views/cqadetail.html
+++ b/frontend/main/app/views/cqadetail.html
@@ -1,1 +1,24 @@
-<p>This is the cqaDetail view.</p>
+<pre>
+{{baseList | json:4}}
+</pre>
+<ul class="list-group">
+    <li class="list-group-item" ng-repeat="item in baseList">
+        <div class="row">
+            <div class="col-xs-12 col-sm-2">
+                <label>Attachments</label>
+            </div>
+            <div class="col-xs-12 col-sm-1">
+                <label>Due Date</label>
+            </div>
+            <div class="col-xs-12 col-sm-2">
+                <label>Who's Got Next Step</label>
+            </div>
+            <div class="col-xs-12 col-sm-5">
+                <label>Ongoing Activities</label>
+            </div>
+            <div class="col-xs-12 col-sm-1">
+                <label>Closed Date</label>
+            </div>
+        </div>
+    </li>
+</ul>
