--- a/frontend/main/app/views/cqa.html
+++ b/frontend/main/app/views/cqa.html
@@ -2,7 +2,9 @@
     <div class="form-group">
         <div class="col-sm-3 col-sm-offset-9 well">
             <h4 class="text-center">CQA Number</h4>
-            <h4 class="text-center">12345{{::baseEntity.CQANumber}}</h4>
+            <h3 class="text-center">12345{{::baseEntity.CQANumber}}</h3>
+            <h4 class="text-center">PTR Number</h4>
+            <h3 class="text-center">12345{{::baseEntity.CQANumber}}</h3>
         </div>
     </div>
     <div class="form-group">
