-Attachments directive updated. -Working with CQALine...

--- a/frontend/main/app/styles/main.scss
+++ b/frontend/main/app/styles/main.scss
@@ -8,6 +8,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "alertify-theme";
 @import "theme-flatly";
 @import "selectize.bootstrap3.theme-flatly";
+@import "attachments-flatly";
 
 
 .browsehappy {
